# youtube-creators

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
backend/: config.py  exceptions.py
backend/agents/: connect.py  prompts.py  schemas.py  workflows.py
backend/db/: connect.py  schemas.py  utils.py
backend/youtube/: api.py  connect.py  schemas.py
evals/: prompt_improvement.py
experiments/: prompt_improvement.py
tests/: test_main.py
youtube_creators/: models.py
